force-app/main/default/objects/PlanoAtividade__c/PlanoAtividade__c.object-meta.xml
<CustomObject>
    <label>Plano de Atividade</label>
    <nameField>
        <label>Nome de Plano de Atividade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos de Atividades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>