force-app/main/default/objects/PlanoAtividade__c/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <label>Atividade</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>