force-app/main/default/objects/PlanoAtividade__c/fields/PlanoTreino__c.field-meta.xml
<CustomField>
    <fullName>PlanoTreino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo lookup que retorna os Planos de Treinos disponiveis</description>
    <label>Plano de treino</label>
    <referenceTo>PlanoTreino__c</referenceTo>
    <relationshipLabel>Planos de Atividades</relationshipLabel>
    <relationshipName>Planos_de_Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>