force-app/main/default/objects/PlanoAtividade__c/fields/TempoPlanejado__c.field-meta.xml
<CustomField>
    <fullName>TempoPlanejado__c</fullName>
    <label>Tempo planejado</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>