force-app/main/default/objects/PlanoAtividade__c/fields/TempoRealizado__c.field-meta.xml
<CustomField>
    <fullName>TempoRealizado__c</fullName>
    <label>Tempo realizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>