force-app/main/default/objects/PlanoAtividade__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Campo picklist que contém o nome do tipo da atividade a ser realizada.</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desafios coordenativos</fullName>
            </value>
            <value>
                <fullName>Desafios técnico-táticos e socioemocionais</fullName>
            </value>
            <value>
                <fullName>Jogos de criatividade</fullName>
            </value>
            <value>
                <fullName>Jogos reduzidos e jogo formal</fullName>
            </value>
            <value>
                <fullName>Roda final</fullName>
            </value>
            <value>
                <fullName>Roda Inicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>